--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -19,17 +19,18 @@
   color: white;
 }
 
+
 .App-link {
-  color: #61dafb;
+  color: #45e098;
 }
 
 body {
-  font-family: "Oswald";
+  font-family: "Arial";
   letter-spacing: 0.3rem;
   text-allign: center;
 }
 .text-blue {
-  color: blue
+  color: rgb(0, 255, 85)
 }
 
 .container {
@@ -66,6 +67,26 @@ body {
   max-height: 89%;
   margin: 30px 0px;
 }
+
+.position {
+  float: right;
+right: 0px;
+padding-top: 60px;
+padding-right: 20px;
+padding-bottom: 0px;
+padding-left: 120px;
+}
+.text-allign {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.navbar navbar-expand-lg navbar-light bg-light {
+  min-height: 100px;
+  padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 
 
 @keyframes App-logo-spin {
