--- a/frontend/src/assets/css/App.css
+++ b/frontend/src/assets/css/App.css
@@ -86,8 +86,22 @@ padding-left: 120px;
   padding-top: 30px;
     padding-bottom: 30px;
 }
+.table {
+  font-family: Arial, Helvetica, sans-serif;
+  
+}
+.data {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+.button {
+padding: 10px;
+  width: 80px;
+  min-height: 100px;
 
-
+  padding-bottom: 30px;
+}
 
 @keyframes App-logo-spin {
   from {
